Grade11/TravellingSalesman3D/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
/Applications/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Applications/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/njk/GitHub/ProgrammingClub11/DecemberCompetition/TravellingSalesman3D
-d
/Users/njk/GitHub/ProgrammingClub11/DecemberCompetition/TravellingSalesman3D/doc
-encoding
US-ASCII
-charset
US-ASCII
-docletpath
/Applications/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/njk/GitHub/ProgrammingClub11/DecemberCompetition/TravellingSalesman3D/AntColony.java
<---- end of javadoc command ---->
Loading source file /Users/njk/GitHub/ProgrammingClub11/DecemberCompetition/TravellingSalesman3D/AntColony.java...
/Users/njk/GitHub/ProgrammingClub11/DecemberCompetition/TravellingSalesman3D/AntColony.java:10: error: illegal start of type
    }
    ^
/Users/njk/GitHub/ProgrammingClub11/DecemberCompetition/TravellingSalesman3D/AntColony.java:10: error: ')' expected
    }
     ^
/Users/njk/GitHub/ProgrammingClub11/DecemberCompetition/TravellingSalesman3D/AntColony.java:11: error: ';' expected
    static class Edge {
          ^
/Users/njk/GitHub/ProgrammingClub11/DecemberCompetition/TravellingSalesman3D/AntColony.java:11: error: <identifier> expected
    static class Edge {
                     ^
/Users/njk/GitHub/ProgrammingClub11/DecemberCompetition/TravellingSalesman3D/AntColony.java:15: error: invalid method declaration; return type required
        public Edge(Point p1, Point p2) {
               ^
5 errors
